Fix navbar size on mobile screens

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,7 +6,7 @@
 
 @media only screen and (min-device-width: 320px) {
     .photos {
-      max-width: 90%;
+      max-width: 100%;
     }
 }
 
